syntax = "proto3";

option csharp_namespace = "ExpertSystem.Common.Generated";

package ExpertSystem;

service SocketExchange {
    rpc SayHello (HelloMessage) returns (HelloMessage) {}

    rpc GetSockets (Empty) returns (stream CustomSocket) {}
    rpc UpsertSocket (CustomSocket) returns (CustomSocket) {}
    rpc DeleteSocket (CustomSocket) returns (Empty) {}

    rpc GetGroups (Empty) returns (stream Category) {}
    rpc AddGroup (Category) returns (Category) {}
    rpc AddSocketToGroup (Category) returns (Category) {}
    rpc RemoveSocketFromGroup (AddSocket) returns (Category) {}
    rpc DeleteGroup (Category) returns (Empty) {}
}

message Empty {}

message HelloMessage {
    string Version = 1;
}

message CustomSocket {
    string Color = 1;
    string ContactMaterial = 2;
    string ContactPlating = 3;
    string Gender = 4;
    string HousingColor = 5;
    string HousingMaterial = 6;
    string Material = 7;
    string MountingStyle = 8;
    int32 NumberOfContacts = 9;
    int32 NumberOfPositions = 10;
    int32 NumberOfRows = 11;
    string Orientation = 12;
    float PinPitch = 13;
    float SizeDiameter = 14;
    float SizeHeight = 15;
    float SizeLength = 16;
    float SizeWidth = 17;
    string SocketName = 18;
}

message Category {
    string Name = 1;
    repeated string SocketName = 2;
}

message AddSocket {
    string categoryName = 1;
    CustomSocket socket = 2;
}
